[gd_scene load_steps=4 format=3 uid="uid://xgut27qtlpbd"]

[ext_resource type="Script" uid="uid://bflh4x8wu5ha6" path="res://objects/character/player/player.gd" id="1_jpa1g"]
[ext_resource type="PackedScene" uid="uid://cv2i471rse4tl" path="res://components/chat_bubble/chat_bubble.tscn" id="2_gmfbp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_634de"]
radius = 0.3
height = 1.75

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_jpa1g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_634de")
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="Model" type="Node3D" parent="."]

[node name="CameraPivot" type="Node3D" parent="."]

[node name="CameraRig" type="Node3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.707106, 0.707106, 0, -0.707106, 0.707106, 0, 4.5, 4.5)

[node name="ChatBubbleOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="ChatBubble" parent="ChatBubbleOrigin" instance=ExtResource("2_gmfbp")]
